Tue Jul 13 18:04:11 2004  Jonathan Blandford  <jrb@gnome.org>

	* desktop-entry-spec.xml: Update the MIME description to make it
	more relevent.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Pointed out by Ville Skyttä <ville.skytta@iki.fi>

	* desktop-entry-spec.xml: fix minor typo.

2004-04-18  Mark McLoughlin  <mark@skynet.ie>

	Patch from Ville Skyttä <ville.skytta@iki.fi>

	* desktop-entry-spec.xml: editorial changes, fixes for
	typos and general cleanups.

Mon Jul  7 18:26:14 2003  Owen Taylor  <otaylor@redhat.com>

	* destop-entry-spec.sgml: Merge changes by Havoc
	Pennington that had been made in web module:

	2002/04/20: add changes posted to xdg-list a while back

Sat Aug 24 17:00:48 2002  Owen Taylor  <otaylor@redhat.com>

	* desktop-entry-spec.sgml: In legacy-mixed table, fix duplicate 
	pt entry, language code for Armenian. Make explicit that
	language-country locale tags can match a single language in
	the table. (Pablo Saratxaga)

Tue Mar 13 12:37:03 2001  Owen Taylor  <otaylor@redhat.com>

	* 0.9.3

	* Reworked the description of encoding handling for
	Legacy-Mixed for clarity and added a bit more details
	on how encoding-matching should be done. 
 
Thu Mar  8 17:42:05 2001  Owen Taylor  <otaylor@redhat.com>

	* Import into CVS.
